Edited UG, Formatted DG, Edited parser to intake years 1-4 only