@@ -1,17 +1,79 @@
-# Developer Guide
+# Modganiser Developer Guide
 
-## Acknowledgements
+## Introduction
+
+---
+
+Modganiser is **effortless module planning, at your fingertips via the Command Line Interface** (CLI). It helps Information security students graduate in time by giving you a platform to plan all 4 years of your modules to ensure that you meet graduation requirements (UE/GEs).  If you can type fast, Modganiser can get your schedule up  faster than traditional GUI apps.
+
+## Table of Contents
+
+---
+
+[Introduction](#introduction)
+
+[Table of contents](#table-of-contents) 
+0. [Acknowledgements](#0-acknowledgements)
+1. [Product Scope](#1-product-scope)
+2. [Target User Profile](#2-target-user-profile)
+3. [User Stories](#3-user-stories)
+4. [Non-Functional Requirements](#4-non-functional-requirements)
+5. [Design & Implementation: Manpage](#5-design--implementation--manpage)
+   + 5.1 [Implementation](#51-implementation)
+   + 5.2 [Design Considerations](#52-design-considerations)
+6. [Design & Implementation: Parser](#6-design--implementation--parser)
+7. [Design & implementation: Add Modules](#7-design--implementation--add-modules)
+8. [Design & implementation: Find Modules](#8-design--implementation--find-modules)
+9. [Design & implementation: Delete Modules](#9-design--implementation--delete-modules)
+10. [Design & implementation: Edit Modules](#10-design--implementation--edit-modules)
+11. [Design & implementation: Add or Update Grade](#11-design--implementation--add-or-update-grade)
+12. [Design & implementation: Calculate CAP](#12-design--implementation--calculate-cap)
+13. [Glossary](#13-glossary)
+14. [Instructions for manual testing](#14-instructions-for-manual-testing)
+
+## 0. Acknowledgements
 
 {list here sources of all reused/adapted ideas, code, documentation, and third-party libraries -- include links to the original source as well}
 
-## Design & implementation
+## 1. Product Scope
 
-{Describe the design and implementation of the product. Use UML diagrams and short code snippets where applicable.}
+---
 
-### Proposed Implementation : **Manpage**
+### 2. Target User Profile
+
+Our target user profile is Information Security students in NUS.
+
+## 3. User Stories
+
+| Version | As a...      | I want to...                                    | So that I can...                                                               |
+|---------|--------------|-------------------------------------------------|--------------------------------------------------------------------------------|
+| v1.0    | New user     | See usage instructions                          | Refer to them when I forget the commands                                       |
+| v1.0    | New user     | See usage instructions based on feature         | Get more in depth knowledge on the feature that I require                      |
+| v1.0    | New user     | Find a module by its code                       | Locate the module code without having to go through the entire list of modules |
+| v2.0    | Current user | Find a module by its type                       | Locate all modules in a category without having to go through the entire list  |
+| v1.0    | New user     | Add modules                                     | To plan out my 4 years in uni                                                  |
+| v1.0    | New user     | Delete modules                                  | To edit my plan when necessary                                                 |
+| v1.0    | New user     | View all my modules                             | Visualise my 4 year plan                                                       |
+| v2.0    | Current user | View my modules by year                         | Focus better on one year rather than all 4 years                               |
+| v1.0    | New user     | Categorise my modules by type                   | Ensure that all requirements are met                                           |
+| v2.0    | Current user | Track the completion status of each module type | Ensure that all requirements are met                                           |
+| v2.0    | Current user | Update the grade I got for a module             | Keep track of my grades                                                        |
+| v2.0    | Current user | Calculate my CAP                                | Know my current CAP and project what honours I’ll graduate with                |
+| v2.0    | Current user | Edit the details of current modules             | Change the details should I made a mistake or there was an update from NUS     |
+
+## 4. Non-Functional Requirements
+
+1. Should work on any mainstream OS as long as it has Java 11 or above installed
+2. Should be able to hold up to 1000 persons without a noticeable sluggishness in performance for typical usage.
+3. A user with above average typing speed for regular English text (i.e. not code, not system admin commands) should be able to accomplish most of the tasks faster using commands than using the mouse.
+
+
+## 5. Design & Implementation: Manpage 
 
 The Manpage is a class that is used to display parts of the manpage that is requested by the user.
 It has multiple methods for separate features.
+
+### 5.1. Implementation
 
 The sequence by which the ManPage class handles the `man` command is as follows:
 1) The `Parser` class extracts the other fields of the user input, and calls upon the `checkUserInput()` method
@@ -39,7 +101,7 @@ The sequence by which the ManPage class handles the `man` command is as follows:
 
 ![ManPage](diagrams/ManPage.png)
 
-### Design Considerations : **Manpage**
+### 5.2. Design Considerations
 
 **Alternative 1** : Prints the manual page individually as features. 
 Pros: Avoids wordy and long manual page when command is man, ability to have more description
@@ -51,7 +113,7 @@ Pros: Avoid extra step of typing another command to understand a feature well.
 Cons: Wordy and long manual page when command is man, user has to scroll through
 a long manual page to find what they need. Long method.
 
-### Implementation: **Parser**
+## 6. Design & Implementation: Parser
 
 The `Parser` is a class that handles the commands keyed in by the user.  
 It has multiple checks to ensure that the user keys in valid commands. 
@@ -59,7 +121,28 @@ It has multiple checks to ensure that the user keys in valid commands.
 <!---elaborate more on the class, still unsure of the format...--->
 <!---insert other commands here, still unsure of the format...(should it all be under Parser class or separate?)--->
 
-### Implementation: **Find Modules Feature**
+## 7. Design & implementation: Add Modules
+
+`add` command:
+
+The `add` command is used by the user to add a module or multiple modules at once.
+
+The sequence by which the Parser class handles the `add` command is as follows:
+1) The `Parser` class extracts the necessary fields from the user input, and calls upon the `addModule`
+   method in the `ModuleList` class in a loop.
+2) The method then checks the type of module that is being added, then calls the relevant
+   constructor (`Core`, `UE`, `GE`, `Internship`).
+3) The `addModule` method returns the module that is added to the `Parser` class.
+4) The `getModuleListSize` method is called from `ModuleList` class.
+5) The `printAddedModule` method is called from the `Print` class to display the result to the user.
+
+The sequence of events above can be represented with the following sequence diagram:
+
+![addInputCommand](diagrams/AddInputCommand.png)
+
+<small><i>Figure ???</i></small>
+
+## 8. Design & implementation: Find Modules
 
 The find modules features is facilitated by the `Parser`, `ModuleList` and `Module` Classes. `Parser` helps to check
 for user input to determine is user doing a search via a module name or module type, which will then invoke the 
@@ -90,87 +173,14 @@ The following sequence diagram shows how the `findModuleByName` operation works:
 
 <small><i>Figure ???</i></small>
 
-`grade` command:
+9. [Design & implementation: Delete Modules]()
+10. [Design & implementation: Edit Modules]()
+11. [Design & implementation: Add or Update Grade]()
+12. [Design & implementation: Calculate CAP]()
+13. [Glossary]()
+14. [Instructions for manual testing]()
 
-The `grade` command is used by the user to update the grade of modules that have already been completed.  
-
-The sequence by which the Parser class handles the `grade` command is as follows:  
-1) The `Parser` class extracts the other fields of the user input, and calls upon the `updateModuleGrade()` method
-in the `ModuleList` class.  
-2) The method then loops through the moduleList array to find the moduleCode that requires a grade update. 
-3) If the module is found, it calls the `Module` object method `setGrade()` to update the grade field
-and prints a success message by calling the `printUpdatedModuleGrade()` method of the `Print` class.
-4) Else, it prints an error message by calling the `printInvalidModule()` method of the `Print` class.  
-
-The sequence of events above can be represented with the following sequence diagram:
-
-![gradeCommand](diagrams/GradeCommand.png)
-
-<small><i>Figure ???</i></small>
-
-`calculateCAP` command:
-
-The `calculateCAP` command is used by the user to calculate the Cumulative Average Point (CAP) of graded modules.
-
-The sequence by which the Parser class handles the `calculateCAP` command is as follows:
-1) The `Parser` class extracts the other fields of the user input, and calls upon the `calculateCAP()` method
-   in the `ModuleList` class.
-2) The method then loops through the moduleList array to find modules that have been graded.
-3) It checks if the module grade should be counted by self-invocation of the `shouldCountModule()` method
-4) If it is, proceeds to obtain the grade value by self-invocation of the `getGradeValue()` method.
-5) Calculates the required grade values, and finally calls the `printCalculatedCAP()` of the `Print` class to display
-the result to the user
-
-The sequence of events above can be represented with the following sequence diagram:
-
-![calculateCAP](diagrams/CalculateCAP.png)
-
-<small><i>Figure ???</i></small>
-
-`add` command:
-
-The `add` command is used by the user to add a module or multiple modules at once.
-
-The sequence by which the Parser class handles the `add` command is as follows:
-1) The `Parser` class extracts the necessary fields from the user input, and calls upon the `addModule`
-   method in the `ModuleList` class in a loop.
-2) The method then checks the type of module that is being added, then calls the relevant 
-   constructor (`Core`, `UE`, `GE`, `Internship`).
-3) The `addModule` method returns the module that is added to the `Parser` class.
-4) The `getModuleListSize` method is called from `ModuleList` class.
-5) The `printAddedModule` method is called from the `Print` class to display the result to the user.
-
-The sequence of events above can be represented with the following sequence diagram:
-
-![addInputCommand](diagrams/AddInputCommand.png)
-
-<small><i>Figure ???</i></small>
-
-`edit` command:
-
-The `edit` command is used by the user to make changes to fields in the module description.
-
-The sequence in which the `Parser` class handles the `edit` command is as follows:
-1) The `Parser` class extracts the other fields of the user input, and calls upon the `editModuleField()` method
-   by self-invocation. 
-2) The method then uses a `switch` statement to evaluate the module field that the user wants to update.
-3) After checking the field to be updated, the appropriate method within the `ModuleList` class is called upon to
-   make the changes specified by the user.
-4) If the user wants to update Modular Credits, the `editModularCredits()` method is called. 
-   This method directly modifies the `modularCredits` attribute of the `Module` object.
-5) If the user wants to update Module Type, the `editModuleType()` method is called.
-   This method removes the existing `Module` object and adds a new `Module` object of the new type specified
-   by the user. The `getModuleCode()`, `getModularCredits()`, `getYear()`, `getSemester()` and `getGrade()`
-   methods in the `Module` class are also called upon to obtain the respective fields required to create the new
-   `Module` object. 
-6) If the user wants to update the Year, the `editYear()` method is called.
-   This method directly modifies the `year` attribute of the `Module` object.
-7) If the user wants to update the Semester, the `editSemester()` method is called.
-   This method directly modifies the `semester` attribute of the `Module` object.
-
-![editCommand](diagrams/EditCommand.png)
-
-<small><i>Figure ???</i></small>
+## 9. Design & implementation: Delete Modules
 
 `delete` command:
 
@@ -191,37 +201,81 @@ The sequence in which the `Parser` class handles the `delete` command is as foll
 
 <small><i>Figure ???</i></small>
 
-## Product scope
-### Target user profile
+## 10. Design & implementation: Edit Modules
 
-Our target user profile is Information Security students in NUS.
+`edit` command:
 
-### Value proposition
+The `edit` command is used by the user to make changes to fields in the module description.
 
-Modganiser is effortless module planning, at your fingertips via the
-Command Line Interface (CLI). It helps Information security 
-students graduate in time by giving you a platform to plan all 4 years
-of your modules to ensure that you meet graduation requirements (UE/GEs).
-If you can type fast, Modganiser can get your schedule up faster than
-traditional GUI apps.
+The sequence in which the `Parser` class handles the `edit` command is as follows:
+1) The `Parser` class extracts the other fields of the user input, and calls upon the `editModuleField()` method
+   by self-invocation.
+2) The method then uses a `switch` statement to evaluate the module field that the user wants to update.
+3) After checking the field to be updated, the appropriate method within the `ModuleList` class is called upon to
+   make the changes specified by the user.
+4) If the user wants to update Modular Credits, the `editModularCredits()` method is called.
+   This method directly modifies the `modularCredits` attribute of the `Module` object.
+5) If the user wants to update Module Type, the `editModuleType()` method is called.
+   This method removes the existing `Module` object and adds a new `Module` object of the new type specified
+   by the user. The `getModuleCode()`, `getModularCredits()`, `getYear()`, `getSemester()` and `getGrade()`
+   methods in the `Module` class are also called upon to obtain the respective fields required to create the new
+   `Module` object.
+6) If the user wants to update the Year, the `editYear()` method is called.
+   This method directly modifies the `year` attribute of the `Module` object.
+7) If the user wants to update the Semester, the `editSemester()` method is called.
+   This method directly modifies the `semester` attribute of the `Module` object.
+
+![editCommand](diagrams/EditCommand.png)
+
+<small><i>Figure ???</i></small>
+
+## 11. Design & implementation: Add or Update Grade
+
+`grade` command:
+
+The `grade` command is used by the user to update the grade of modules that have already been completed.
+
+The sequence by which the Parser class handles the `grade` command is as follows:
+1) The `Parser` class extracts the other fields of the user input, and calls upon the `updateModuleGrade()` method
+   in the `ModuleList` class.
+2) The method then loops through the moduleList array to find the moduleCode that requires a grade update.
+3) If the module is found, it calls the `Module` object method `setGrade()` to update the grade field
+   and prints a success message by calling the `printUpdatedModuleGrade()` method of the `Print` class.
+4) Else, it prints an error message by calling the `printInvalidModule()` method of the `Print` class.
+
+The sequence of events above can be represented with the following sequence diagram:
+
+![gradeCommand](diagrams/GradeCommand.png)
+
+<small><i>Figure ???</i></small>
 
 
-## User Stories
+## 12. Design & implementation: Calculate CAP
 
-|Version| As a ... | I want to ... | So that I can ...|
-|--------|----------|---------------|------------------|
-|v1.0|new user|see usage instructions|refer to them when I forget how to use the application|
-|v2.0|user|find a to-do item by name|locate a to-do without having to go through the entire list|
+`calculateCAP` command:
 
-## Non-Functional Requirements
+The `calculateCAP` command is used by the user to calculate the Cumulative Average Point (CAP) of graded modules.
 
-1. Should work on any mainstream OS as long as it has Java 11 or above installed.
-2. Should be able to hold up to 1000 persons without a noticeable sluggishness in performance for typical usage.
-3. A user with above average typing speed for regular English text (i.e. not code, not system admin commands)
-should be able to accomplish most of the tasks faster using commands than using the mouse.
+The sequence by which the Parser class handles the `calculateCAP` command is as follows:
+1) The `Parser` class extracts the other fields of the user input, and calls upon the `calculateCAP()` method
+   in the `ModuleList` class.
+2) The method then loops through the moduleList array to find modules that have been graded.
+3) It checks if the module grade should be counted by self-invocation of the `shouldCountModule()` method
+4) If it is, proceeds to obtain the grade value by self-invocation of the `getGradeValue()` method.
+5) Calculates the required grade values, and finally calls the `printCalculatedCAP()` of the `Print` class to display
+   the result to the user
 
-## Glossary
+The sequence of events above can be represented with the following sequence diagram:
 
-Mainstream OS: Windows, Linux, Unix, OS-X
+![calculateCAP](diagrams/CalculateCAP.png)
 
-## Instructions for manual testing
+<small><i>Figure ???</i></small>
+
+## 13. Glossary
+
+Mainstream OS: Windows, Linux, Unix, OS-X, MacOS
+
+## 14. Instructions for manual testing
+
+#NIL
+
